--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="bg-stone-800">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
